--- a/config/src/main/resources/shared/application.yml
+++ b/config/src/main/resources/shared/application.yml
@@ -15,7 +15,7 @@ eureka:
     prefer-ip-address: true
   client:
     serviceUrl:
-      defaultZone: http://registry:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 security:
   oauth2:
@@ -24,4 +24,4 @@ security:
 
 spring:
   rabbitmq:
-    host: rabbitmq
+    host: localhost
