--- a/account-service/src/main/resources/bootstrap.yml
+++ b/account-service/src/main/resources/bootstrap.yml
@@ -1,9 +1,14 @@
 spring:
   application:
     name: account-service
-#  cloud:
-#    config:
-#      uri: http://localhost:8888
-#      fail-fast: true
-#      password: ${CONFIG_SERVICE_PASSWORD}
-#      username: user
+  cloud:
+    config:
+      uri: http://localhost:8888
+      fail-fast: true
+      password: admin
+      username: user
+
+logging:
+  level:
+    org.springframework.security: debug
+
