--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -5,5 +5,8 @@ spring:
     config:
       uri: http://localhost:8888
       fail-fast: true
-      password: ${CONFIG_SERVICE_PASSWORD}
+      password: admin
       username: user
+logging:
+  level:
+    org.springframework.security: DEBUG
