--- a/config/src/main/resources/shared/auth-service.yml
+++ b/config/src/main/resources/shared/auth-service.yml
@@ -1,9 +1,9 @@
 spring:
   data:
     mongodb:
-      host: auth-mongodb
-      username: user
-      password: ${MONGODB_PASSWORD}
+      host: localhost
+#      username: user
+#      password: admin
       database: piggymetrics
       port: 27017
 
